<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_register">

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_margin="5dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/edit_username" />

    <EditText
        android:id="@+id/edit_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/edit_password" />

    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:singleLine="true"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/edit_email_address" />

    <EditText
        android:id="@+id/edit_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:singleLine="true"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/edit_first_name" />

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:singleLine="true"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/edit_last_name" />

    <EditText
        android:id="@+id/edit_address_line_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_line_2"
        android:singleLine="true"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/edit_address" />

    <EditText
        android:id="@+id/edit_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:singleLine="true"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/edit_address_line_two" />

    <EditText
        android:id="@+id/edit_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/state"
        android:singleLine="true"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/edit_city" />

    <EditText
        android:id="@+id/edit_zip_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zip"
        android:inputType="number"
        android:maxLength="5"
        android:singleLine="true"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/edit_state" />

    <EditText
        android:id="@+id/edit_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birthdate"
        android:longClickable="false"
        android:singleLine="true"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/edit_zip_code" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>